[project]
name = "pandasdataframe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=46.0.3",
    "pandas>=2.3.3",
    "psycopg2>=2.9.11",
    "pymysql[rsa]>=1.1.2",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.44",
]
